# Coursework2

./: README.md  main.py  pyproject.toml  vacancies.json
data/: vacancies.csv  vacancies.json  vacancies.txt
src/: config.py  job_api_class.py  save_json.py  vacancy.py  vacancy_utils.py
tests/: test_job_api_class.py  test_save_json.py  test_vacancy.py  test_vacancy_utils.py
