[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Alexander Abramov <richesantiques9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
